--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^2.12.5",
     "axios": "^0.16.2",
     "history": "^4.6.3",
     "jwt-client": "^0.2.1",
